--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-
+    <div class="container">
+        <input type="text" class="val">
+        <button class="btn">Create New</button>
+        <div class="output"></div>
+    </div>
     
     <script src="app.js"></script>
 </body>
